# ZeroEchoPipe

./: .gitignore  CLAUDE.md  README.md
Docs/: _config.yml  index.md  zep-core-v0.1.md
conformance/: CANONICAL_KEY_ORDER.md  README.md  manifest.json
conformance/parse/invalid/: bad_timestamp_no_ms.expected.json  bad_timestamp_no_ms.input.json  bad_timestamp_offset.expected.json  bad_timestamp_offset.input.json  call_missing_method.expected.json  call_missing_method.input.json  call_missing_params.expected.json  call_missing_params.input.json  error_missing_code.expected.json  error_missing_code.input.json  error_missing_retryable.expected.json  error_missing_retryable.input.json  invalid_method_name_hyphen.expected.json  invalid_method_name_hyphen.input.json  invalid_type_value.input.json  (+27 more)
conformance/scenarios/: basic_roundtrip.scenario.json  session_mismatch.scenario.json  timeout.scenario.json  unknown_method.scenario.json
conformance/serialize/: call_basic.expected.jsonl  call_with_timeout.fields.json  error_basic.expected.jsonl  error_with_data.fields.json  event_basic.fields.json  response_basic.expected.jsonl  response_scalar_result.expected.jsonl
zep-py/: pyproject.toml
zep-py/tests/: __main__.py  run_conformance.py  test_agent.py  test_conformance.py  test_connect_factory.py  test_peer_advanced.py  test_pipe_transport.py  test_roundtrip.py  test_scenario.py  test_socket_transport.py  test_tcp_transport.py  test_uds_transport.py
zep-py/zep/: __init__.py  agent.py  message.py  peer.py
zep-py/zep/transport/: __init__.py  base.py  file.py  pipe.py  socket.py  tcp.py  uds.py  winpipe.py
(+20 files in other folders)
